package ar.edu.utn.frba.dds.metamapa.models.entities.enums;

public enum Estado {
  PENDIENTE,
  ACEPTADA,
  RECHAZADA
}
